# paperlayer

./: .gitignore  CMakeLists.txt  LICENSE  README.md
Apps/: CMakeLists.txt
Apps/annotation/: CMakeLists.txt  main.cpp
Apps/matchTemplate/: main.cpp
Apps/method2/: CMakeLists.txt  main.cpp
Apps/parallelFor/: CMakeLists.txt  main.cpp
Apps/processPatches/: CMakeLists.txt  main.cpp
Apps/puzzle/: CMakeLists.txt  main.cpp
Legacy/Matching/: _prog  filters.cpp  intel compiler line  main.cpp  prog  source
Legacy/OpenCVTemplateMatch/: Makefile  main.cpp  prog
Legacy/PolyFinder/: Resources.txt  imageSegmentation.cpp  prog
Legacy/PolyFinder/Original/: Makefile  main.cpp
Legacy/backgroundSubtraction/: main.cpp
Legacy/camera/: Makefile  main.cpp
Matching/: Makefile  filters.cpp  imageProcessing.cpp  main.cpp
PolyFinder/: prog2
Spikes/: .gitignore  CMakeLists.txt
Spikes/annotation/: main.cpp
Spikes/cmake/: .DS_Store~HEAD  code.cpp
Spikes/generateRotations/: main.cpp
Spikes/histogram/: CMakeLists.txt  main.cpp
Spikes/matchTemplate/: CMakeLists.txt  main.cpp
Spikes/rotate/: .gitignore  main.cpp
Spikes/templateMatching/: main.cpp
annotation/: main.cpp
backgroundSubtraction2/: Makefile  main.cpp
cmake/: CMakeLists.txt
generateRotations/: CMakeLists.txt  main.cpp
matchTemplate/: main.cpp
paperlayer/: CMakeLists.txt
python/: 00_START_HERE.txt  API_REFERENCE.md  GETTING_STARTED.py  IMPLEMENTATION_SUMMARY.md  INDEX.md  QUICKSTART.md  QUICK_REFERENCE.md  README.md  TEMPLATE_PREPARATION.md  setup.py
python/template_matcher/: README.md  __init__.py  matcher.py  utils.py
python/template_matcher.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
python/template_matcher/tests/: examples.py  test_demo.py
